# edgarmcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  server.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: publish.yml
scripts/: live_validate.py
src/edgarmcp/: analysis.py  cache.py  config.py  deps.py  facts.py  figi.py  filings.py  funds.py  http_client.py  indices.py  insider.py  macro.py  parser.py  quotes.py  server.py  telemetry.py  tickers.py
tests/: test_analysis.py  test_analysis_aggregate.py  test_cache.py  test_config.py  test_facts.py  test_facts_routing.py  test_facts_tag_selection.py  test_figi.py  test_filings.py  test_filings_helpers.py  test_funds.py  test_funds_parse.py  test_http_client.py  test_indices.py  test_insider.py  test_macro.py  test_parser.py  test_post_json.py  test_quotes.py  test_resolve_holdings.py  test_server.py  test_statements.py  test_telemetry.py  test_tickers.py  test_tickers_name.py
