[project]
name = "mcp-edgar"
version = "0.1.1"
description = "MCP server for clean, normalized SEC EDGAR, FRED, ETF and index data"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "birthday.tools", email = "info+sec@birthday.tools" }]
keywords = ["mcp", "model-context-protocol", "sec", "edgar", "fred", "etf", "finance", "llm", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "defusedxml>=0.7",
    "python-dotenv>=1.0",
    "websocket-client>=1.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
edgarmcp = "edgarmcp.server:main"

[project.urls]
Homepage = "https://github.com/birthday-tools/edgarmcp"
Repository = "https://github.com/birthday-tools/edgarmcp"
Issues = "https://github.com/birthday-tools/edgarmcp/issues"
Changelog = "https://github.com/birthday-tools/edgarmcp/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/edgarmcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
